[package]
name = "lua-js"
version = "0.1.0"
authors = ["Chris Bajorin <chris@chrisbajorin.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "lua_js"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.0"

[dependencies]
rlua = "0.17.0"

[dependencies.neon]
version = "0.5.0"
default-features = false
features = ["default-panic-hook", "legacy-runtime", "try-catch-api", "event-handler-api"]
