[package]
name = "common"
version = "0.1.0"
authors = ["Chris Bajorin <chris@chrisbajorin.com>"]
edition = "2018"

[features]
lua54 = ["mlua/vendored", "mlua/lua54"]
lua53 = ["mlua/vendored", "mlua/lua53"]
lua52 = ["mlua/vendored", "mlua/lua52"]
lua51 = ["mlua/vendored", "mlua/lua51"]
luajit = ["mlua/vendored", "mlua/luajit"]

[dependencies.mlua]
version = "0.5.0"
features = ["send"]

[dependencies.neon]
version = "0.6.0"
default-features = false
features = ["napi-runtime", "proc-macros"]
