[package]
name = "lua51"
version = "0.1.0"
authors = ["Chris Bajorin <chris@chrisbajorin.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "lua51"
path = "../lib.rs"
crate-type = ["cdylib"]

[build-dependencies.neon-build]
version = "0.6.0"
default-features = false


[dependencies]
core = { path = "../core", features = ["lua51"]}