[package]
name = "lua53"
version = "0.1.0"
authors = ["Chris Bajorin <chris@chrisbajorin.com>"]
edition = "2018"
build = "../build.rs"

[lib]
name = "lua53"
path = "../lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.0"

[dependencies.common]
path = "../common"
features = ["lua53"]

[dependencies.neon]
version = "0.7.0"
default-features = false
features = ["napi-runtime", "proc-macros", "event-queue-api"]