[package]
name = "luajit"
version = "0.1.0"
authors = ["Chris Bajorin <chris@chrisbajorin.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "luajit"
path = "../lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.6.0"

[dependencies]
core = { path = "../core", features = ["luajit"]}
